--- a/index.html
+++ b/index.html
@@ -4,48 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <head>̀
-        <style>
-            @keyframes fillProgress {
-                from { stroke-dashoffset: 376.8; }
-                to { stroke-dashoffset: 30.144; }
-            }
-            .circle-progress {
-                animation: fillProgress 1.5s ease-out forwards;
-            }
-            .pulse {
-                animation: pulse 2s infinite;
-            }
-            @keyframes pulse {
-                0% { transform: scale(1); opacity: 1; }
-                50% { transform: scale(1.05); opacity: 0.8; }
-                100% { transform: scale(1); opacity: 1; }
-            }
-
-            @keyframes slideProgress {
-                from { width: 0%; }
-                to { width: var(--progress); }
-            }
-            .metric-progress {
-                animation: slideProgress 1.5s ease-out forwards;
-            }
-        </style>
-    </head>
+    <link rel="stylesheet" href="styles/main.css">
     <title>Jobster</title>
 </head>
-<body class="flex justify-center h-screen bg-black">
-    
+<body class="flex justify-center h-screen bg-gradient-to-br from-[#0f1022] via-[#0c0d1b] to-[#060711]">
     <div class="flex flex-col w-11/12 space-y-4 my-8">
-
         <!-- Header Section -->
-
-        <div class="relative flex h-20 rounded-md items-end overflow-hidden bg-purple-900">
-            <h1 class="relative z-10 font-medium text-2xl p-4 subpixel-antialiased text-white">Jobster_</h1>
+        <div class="relative flex h-20 rounded-md items-center justify-between overflow-hidden bg-purple-900 px-4">
+            <h1 class="relative z-10 font-medium text-2xl subpixel-antialiased text-white">Jobster_</h1>
+            <button id="darkModeToggle" class="relative z-10 px-4 py-2 bg-purple-700 text-white rounded-md hover:bg-purple-600">
+                Toggle Dark Mode
+            </button>
         </div>
         
         <!-- System Health Section -->
 
-        <div class="flex bg-gray-200 h-[30%] rounded-md p-4">
+        <div class="flex bg-white h-[30%] rounded-md p-4">
             <div class="flex w-full gap-4">
                 <!-- Left Side - Circle Health Indicator -->
                 <div class="flex-none w-48 flex items-center justify-center">
@@ -134,20 +108,22 @@
         </div>
 
         <!--Job Status Table Section-->
-        <div class="flex bg-gray-200 h-[calc(70%-1rem)] rounded-md overflow-hidden">
+        <div class="flex flex-col bg-gray-200 h-[calc(70%-1rem)] rounded-md overflow-hidden">
             <div class="w-full">
-                <div class="bg-gray-800 text-gray-200 px-6 py-3 font-medium">
-                    Active Jobs
+                <div class="bg-gray-800 text-gray-200 px-6 py-3 font-medium flex justify-between items-center">
+                    <span>Active Jobs</span>
+                    <input type="text" id="jobSearch" placeholder="Search jobs..." class="px-3 py-1 rounded-md bg-gray-700 text-white">
                 </div>
                 <div class="overflow-auto h-[calc(100%-48px)]">
                     <table class="min-w-full divide-y divide-gray-300">
                         <thead class="bg-gray-100 sticky top-0">
                             <tr>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Job ID</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Type</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Started</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Progress</th>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider w-[15%]">Job ID</th>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider w-[15%]">Status</th>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider w-[20%]">Type</th>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider w-[15%]">Started</th>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider w-[20%]">Progress</th>
+                                <th scope="col" class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider w-[15%]">&nbsp;&nbsp;&nbsp;&nbsp;Actions</th>
                             </tr>
                         </thead>
                         <tbody class="bg-white divide-y divide-gray-200">
@@ -161,6 +137,22 @@
                                 <td class="px-6 py-4 whitespace-nowrap">
                                     <div class="w-full bg-gray-200 rounded-full h-2.5">
                                         <div class="bg-blue-600 h-2.5 rounded-full" style="width: 45%"></div>
+                                    </div>
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 flex justify-center">
+                                    <div class="relative inline-block text-left">
+                                        <button class="p-2.5 rounded-full hover:bg-gray-100 flex items-center justify-center" onclick="toggleDropdown(this)">
+                                            <svg class="w-7 h-7 text-gray-500" fill="currentColor" viewBox="0 0 24 24">
+                                                <path d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z" />
+                                            </svg>
+                                        </button>
+                                        <div class="hidden absolute right-0 mt-2 w-48 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 z-50 origin-top-right" role="menu">
+                                            <div class="py-1">
+                                                <button class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">View Details</button>
+                                                <button class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Pause Job</button>
+                                                <button class="block w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-gray-100" role="menuitem">Cancel Job</button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </td>
                             </tr>
@@ -177,6 +169,22 @@
                                         <div class="bg-yellow-600 h-2.5 rounded-full" style="width: 25%"></div>
                                     </div>
                                 </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 flex justify-center">
+                                    <div class="relative inline-block text-left">
+                                        <button class="p-2.5 rounded-full hover:bg-gray-100 flex items-center justify-center" onclick="toggleDropdown(this)">
+                                            <svg class="w-7 h-7 text-gray-500" fill="currentColor" viewBox="0 0 24 24">
+                                                <path d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z" />
+                                            </svg>
+                                        </button>
+                                        <div class="hidden absolute right-0 mt-2 w-48 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 z-50 origin-top-right" role="menu">
+                                            <div class="py-1">
+                                                <button class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">View Details</button>
+                                                <button class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Pause Job</button>
+                                                <button class="block w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-gray-100" role="menuitem">Cancel Job</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </td>
                             </tr>
                             <tr class="hover:bg-gray-50">
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">#JOB-003</td>
@@ -190,6 +198,22 @@
                                         <div class="bg-red-600 h-2.5 rounded-full" style="width: 80%"></div>
                                     </div>
                                 </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 flex justify-center">
+                                    <div class="relative inline-block text-left">
+                                        <button class="p-2.5 rounded-full hover:bg-gray-100 flex items-center justify-center" onclick="toggleDropdown(this)">
+                                            <svg class="w-7 h-7 text-gray-500" fill="currentColor" viewBox="0 0 24 24">
+                                                <path d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z" />
+                                            </svg>
+                                        </button>
+                                        <div class="hidden absolute right-0 mt-2 w-48 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 z-50 origin-top-right" role="menu">
+                                            <div class="py-1">
+                                                <button class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">View Details</button>
+                                                <button class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Pause Job</button>
+                                                <button class="block w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-gray-100" role="menuitem">Cancel Job</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </td>
                             </tr>
 
                             <!-- Add more rows as needed -->
@@ -197,7 +221,7 @@
                     </table>
                 </div>
             </div>
-        <div>
+        </div>
     </div>
 </body>
 <script src="dynamic.js"></script>
