--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <title>Jobster</title>
 </head>
-<body class="flex justify-center h-screen bg-gradient-to-br from-[#0f1022] via-[#0c0d1b] to-[#060711]">
+<body class="bg-black flex justify-center h-screen bg-gradient-to-br from-[#0f1022] via-[#0c0d1b] to-[#060711]">
     <div class="flex flex-col w-11/12 space-y-4 my-8">
         <!-- Header Section -->
         <div class="relative flex h-20 rounded-md items-center justify-between overflow-hidden bg-purple-900 px-4">
@@ -62,7 +62,7 @@
                     
                     <div class="grid grid-cols-2 gap-2 mb-2">
                         <!-- CPU Usage -->
-                        <div class="bg-white rounded-lg p-2 shadow-sm">
+                        <div class="bg-gray-200 rounded-lg p-2 shadow-sm">
                             <div class="flex justify-between items-center mb-1">
                                 <span class="text-xs font-medium text-gray-500">CPU Usage</span>
                                 <span class="text-xs font-bold text-gray-700">45%</span>
@@ -73,7 +73,7 @@
                         </div>
 
                         <!-- Memory Usage -->
-                        <div class="bg-white rounded-lg p-2 shadow-sm">
+                        <div class="bg-gray-200 rounded-lg p-2 shadow-sm">
                             <div class="flex justify-between items-center mb-1">
                                 <span class="text-xs font-medium text-gray-500">Memory Usage</span>
                                 <span class="text-xs font-bold text-gray-700">68%</span>
@@ -86,19 +86,19 @@
 
                     <div class="grid grid-cols-4 gap-2">
                         <!-- Stats -->
-                        <div class="bg-white rounded-lg p-2 shadow-sm">
+                        <div class="bg-gray-200 rounded-lg p-2 shadow-sm">
                             <div class="text-base font-bold text-gray-800">246</div>
                             <div class="text-xs text-gray-500">Total Jobs</div>
                         </div>
-                        <div class="bg-white rounded-lg p-2 shadow-sm">
+                        <div class="bg-gray-200 rounded-lg p-2 shadow-sm">
                             <div class="text-base font-bold text-green-600">12</div>
                             <div class="text-xs text-gray-500">Running</div>
                         </div>
-                        <div class="bg-white rounded-lg p-2 shadow-sm">
+                        <div class="bg-gray-200 rounded-lg p-2 shadow-sm">
                             <div class="text-base font-bold text-red-600">8</div>
                             <div class="text-xs text-gray-500">Failed</div>
                         </div>
-                        <div class="bg-white rounded-lg p-2 shadow-sm">
+                        <div class="bg-gray-200 rounded-lg p-2 shadow-sm">
                             <div class="text-base font-bold text-blue-600">226</div>
                             <div class="text-xs text-gray-500">Completed</div>
                         </div>
@@ -128,7 +128,7 @@
                         </thead>
                         <tbody class="bg-white divide-y divide-gray-200">
                             <tr class="hover:bg-gray-50">
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">#JOB-001</td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">#JOB-001</td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm">
                                     <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">Running</span>
                                 </td>
@@ -158,7 +158,7 @@
                             </tr>
 
                             <tr class="hover:bg-gray-50">
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">#JOB-002</td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">#JOB-002</td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm">
                                     <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-yellow-100 text-yellow-800">Pending</span>
                                 </td>
@@ -187,7 +187,7 @@
                                 </td>
                             </tr>
                             <tr class="hover:bg-gray-50">
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">#JOB-003</td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-500">#JOB-003</td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm">
                                     <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-red-100 text-red-800">Failed</span>
                                 </td>
