--- a/index.html
+++ b/index.html
@@ -6,15 +6,26 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles/main.css">
     <title>Jobster</title>
+    <script>
+        // Check authentication
+        if (!localStorage.getItem('isLoggedIn')) {
+            window.location.href = 'login.html';
+        }
+    </script>
 </head>
 <body class="bg-black flex justify-center h-screen bg-gradient-to-br from-[#0f1022] via-[#0c0d1b] to-[#060711]">
     <div class="flex flex-col w-11/12 space-y-4 my-8">
         <!-- Header Section -->
         <div class="relative flex h-20 rounded-md items-center justify-between overflow-hidden bg-purple-900 px-4">
             <h1 class="relative z-10 font-medium text-2xl subpixel-antialiased text-white">Jobster_</h1>
-            <button id="darkModeToggle" class="relative z-10 px-4 py-2 bg-purple-700 text-white rounded-md hover:bg-purple-600">
-                Toggle Dark Mode
-            </button>
+            <div class="flex items-center gap-4">
+                <button id="logoutBtn" class="relative z-10 px-4 py-2 bg-purple-700 text-white rounded-md hover:bg-purple-600">
+                    Logout
+                </button>
+                <button id="darkModeToggle" class="relative z-10 px-4 py-2 bg-purple-700 text-white rounded-md hover:bg-purple-600">
+                    Toggle Dark Mode
+                </button>
+            </div>
         </div>
         
         <!-- System Health Section -->
