--- a/login.html
+++ b/login.html
@@ -4,25 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     <title>Jobster - Login</title>
+    <style>
+        .gradient-bg {
+            background: linear-gradient(-45deg, #6b46c1, #805ad5, #4299e1, #667eea);
+            background-size: 400% 400%;
+            animation: gradient 15s ease infinite;
+        }
+        @keyframes gradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+        .floating { animation: float 6s ease-in-out infinite; }
+        @keyframes float {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-20px); }
+            100% { transform: translateY(0px); }
+        }
+    </style>
 </head>
-<body class="flex justify-center items-center h-screen bg-neutral-50">
-    <div class="bg-white p-8 rounded-lg shadow-lg w-96">
-        <div class="mb-8 text-center">
-            <h1 class="text-3xl font-bold text-purple-900">Jobster_</h1>
-            <p class="text-gray-500 mt-2">Sign in to your dashboard</p>
+<body class="gradient-bg flex justify-center items-center h-screen">
+    <div class="bg-white p-8 rounded-2xl shadow-2xl w-96 relative overflow-hidden">
+        <div class="absolute top-0 left-0 w-full h-full">
+            <div class="particles absolute inset-0"></div>
         </div>
-        <form id="loginForm" class="space-y-6">
-            <div>
+        <div class="mb-8 text-center relative z-10">
+            <div class="floating">
+                <h1 class="text-4xl font-bold text-purple-900">Jobster_</h1>
+                <div class="mt-2 inline-block">
+                    <svg class="w-24 h-24 mx-auto" viewBox="0 0 200 200" fill="none">
+                        <circle class="accent-circle" cx="100" cy="100" r="80" stroke="url(#grad)" stroke-width="4" fill="none"/>
+                        <defs>
+                            <linearGradient id="grad" x1="0%" y1="0%" x2="100%" y2="100%">
+                                <stop offset="0%" style="stop-color:#9f7aea"/>
+                                <stop offset="100%" style="stop-color:#4299e1"/>
+                            </linearGradient>
+                        </defs>
+                    </svg>
+                </div>
+            </div>
+            <p class="text-gray-600 mt-4 font-medium">Sign in to your dashboard</p>
+        </div>
+        <form id="loginForm" class="space-y-6 relative z-10">
+            <div class="transform transition-all duration-300">
                 <label class="block text-sm font-medium text-gray-700">Email</label>
-                <input type="email" id="email" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-purple-500 focus:border-purple-500">
+                <input type="email" id="email" required 
+                    class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg 
+                    text-gray-900 placeholder-gray-400 focus:ring-2 focus:ring-purple-500 focus:border-purple-500
+                    transition-all duration-300 outline-none shadow-sm">
             </div>
-            <div>
+            <div class="transform transition-all duration-300">
                 <label class="block text-sm font-medium text-gray-700">Password</label>
-                <input type="password" id="password" required class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-purple-500 focus:border-purple-500">
+                <input type="password" id="password" required 
+                    class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg 
+                    text-gray-900 placeholder-gray-400 focus:ring-2 focus:ring-purple-500 focus:border-purple-500
+                    transition-all duration-300 outline-none shadow-sm">
             </div>
             <div>
-                <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-purple-900 hover:bg-purple-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500">
+                <button type="submit" 
+                    class="login-btn w-full flex justify-center py-3 px-4 rounded-lg text-sm font-medium text-white
+                    bg-gradient-to-r from-purple-600 to-purple-700 hover:from-purple-700 hover:to-purple-800
+                    transform transition-all duration-300 hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500
+                    shadow-lg">
                     Sign in
                 </button>
             </div>
