--- a/login.html
+++ b/login.html
@@ -8,66 +8,53 @@
     <title>Jobster - Login</title>
     <style>
         .gradient-bg {
-            background: linear-gradient(-45deg, #6b46c1, #805ad5, #4299e1, #667eea);
-            background-size: 400% 400%;
-            animation: gradient 15s ease infinite;
+            background: linear-gradient(135deg, #1e1b4b, #312e81);
         }
-        @keyframes gradient {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
+        .line-animation {
+            stroke-dasharray: 1000;
+            stroke-dashoffset: 1000;
+            animation: dash 2s ease-in-out forwards;
         }
-        .floating { animation: float 6s ease-in-out infinite; }
-        @keyframes float {
-            0% { transform: translateY(0px); }
-            50% { transform: translateY(-20px); }
-            100% { transform: translateY(0px); }
+        @keyframes dash {
+            to {
+                stroke-dashoffset: 0;
+            }
         }
     </style>
 </head>
 <body class="gradient-bg flex justify-center items-center h-screen">
-    <div class="bg-white p-8 rounded-2xl shadow-2xl w-96 relative overflow-hidden">
-        <div class="absolute top-0 left-0 w-full h-full">
-            <div class="particles absolute inset-0"></div>
-        </div>
-        <div class="mb-8 text-center relative z-10">
-            <div class="floating">
-                <h1 class="text-4xl font-bold text-purple-900">Jobster_</h1>
-                <div class="mt-2 inline-block">
-                    <svg class="w-24 h-24 mx-auto" viewBox="0 0 200 200" fill="none">
-                        <circle class="accent-circle" cx="100" cy="100" r="80" stroke="url(#grad)" stroke-width="4" fill="none"/>
-                        <defs>
-                            <linearGradient id="grad" x1="0%" y1="0%" x2="100%" y2="100%">
-                                <stop offset="0%" style="stop-color:#9f7aea"/>
-                                <stop offset="100%" style="stop-color:#4299e1"/>
-                            </linearGradient>
-                        </defs>
-                    </svg>
-                </div>
+    <div class="bg-white p-10 rounded-xl shadow-2xl w-[420px] relative">
+        <div class="mb-10 text-center">
+            <div class="inline-block mb-6">
+                <svg class="w-32" viewBox="0 0 200 50" fill="none">
+                    <text x="10" y="35" font-family="system-ui" font-size="32" font-weight="700" fill="#312e81">
+                        Jobster_
+                    </text>
+                    <line class="line-animation" x1="10" y1="45" x2="140" y2="45" stroke="#312e81" stroke-width="2"/>
+                </svg>
             </div>
-            <p class="text-gray-600 mt-4 font-medium">Sign in to your dashboard</p>
+            <p class="text-gray-600 text-sm">Sign in to your dashboard</p>
         </div>
-        <form id="loginForm" class="space-y-6 relative z-10">
-            <div class="transform transition-all duration-300">
-                <label class="block text-sm font-medium text-gray-700">Email</label>
+        <form id="loginForm" class="space-y-5">
+            <div class="transform">
+                <label class="block text-sm font-medium text-gray-700 mb-1.5">Email</label>
                 <input type="email" id="email" required 
-                    class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg 
-                    text-gray-900 placeholder-gray-400 focus:ring-2 focus:ring-purple-500 focus:border-purple-500
-                    transition-all duration-300 outline-none shadow-sm">
+                    class="block w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-lg 
+                    text-gray-900 placeholder-gray-400 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500
+                    transition-all duration-200 outline-none">
             </div>
-            <div class="transform transition-all duration-300">
-                <label class="block text-sm font-medium text-gray-700">Password</label>
+            <div class="transform">
+                <label class="block text-sm font-medium text-gray-700 mb-1.5">Password</label>
                 <input type="password" id="password" required 
-                    class="mt-1 block w-full px-4 py-3 bg-white border border-gray-300 rounded-lg 
-                    text-gray-900 placeholder-gray-400 focus:ring-2 focus:ring-purple-500 focus:border-purple-500
-                    transition-all duration-300 outline-none shadow-sm">
+                    class="block w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-lg 
+                    text-gray-900 placeholder-gray-400 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500
+                    transition-all duration-200 outline-none">
             </div>
-            <div>
+            <div class="pt-2">
                 <button type="submit" 
-                    class="login-btn w-full flex justify-center py-3 px-4 rounded-lg text-sm font-medium text-white
-                    bg-gradient-to-r from-purple-600 to-purple-700 hover:from-purple-700 hover:to-purple-800
-                    transform transition-all duration-300 hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500
-                    shadow-lg">
+                    class="login-btn w-full py-3 px-4 rounded-lg text-sm font-medium text-white
+                    bg-indigo-900 hover:bg-indigo-800
+                    transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                     Sign in
                 </button>
             </div>
