--- a/login.html
+++ b/login.html
@@ -10,27 +10,16 @@
         .gradient-bg {
             background: linear-gradient(135deg, #1e1b4b, #312e81);
         }
-        .line-animation {
-            stroke-dasharray: 1000;
-            stroke-dashoffset: 1000;
-            animation: dash 2s ease-in-out forwards;
-        }
-        @keyframes dash {
-            to {
-                stroke-dashoffset: 0;
-            }
-        }
     </style>
 </head>
 <body class="gradient-bg flex justify-center items-center h-screen">
     <div class="bg-white p-10 rounded-xl shadow-2xl w-[420px] relative">
         <div class="mb-10 text-center">
             <div class="inline-block mb-6">
-                <svg class="w-32" viewBox="0 0 200 50" fill="none">
-                    <text x="10" y="35" font-family="system-ui" font-size="32" font-weight="700" fill="#312e81">
-                        Jobster_
+                <svg class="w-32 mx-auto" viewBox="0 0 200 50" fill="none">
+                    <text x="50%" y="35" font-family="system-ui" font-size="32" font-weight="700" fill="#312e81" text-anchor="middle">
+                        Jobster
                     </text>
-                    <line class="line-animation" x1="10" y1="45" x2="140" y2="45" stroke="#312e81" stroke-width="2"/>
                 </svg>
             </div>
             <p class="text-gray-600 text-sm">Sign in to your dashboard</p>
