--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
             <div class="pt-2">
                 <button type="submit" 
                     class="login-btn w-full py-3 px-4 rounded-lg text-sm font-medium text-white
-                    bg-indigo-900 hover:bg-indigo-800
+                    bg-indigo-900 hover:bg-indigo-800 disabled:opacity-50 disabled:cursor-not-allowed
                     transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                     Sign in
                 </button>
