--- a/index.html
+++ b/index.html
@@ -12,11 +12,44 @@
             window.location.href = 'login.html';
         }
     </script>
+    <style>
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px) scale(0.98);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
+        }
+
+        .fade-in-up {
+            opacity: 0;
+            animation: fadeInUp 1s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+        }
+
+        /* Add initial opacity 0 to entire dashboard */
+        #dashboard-container {
+            opacity: 0;
+            animation: fadeIn 1s ease-out forwards;
+        }
+
+        @keyframes fadeIn {
+            to {
+                opacity: 1;
+            }
+        }
+
+        .delay-100 { animation-delay: 200ms; }
+        .delay-200 { animation-delay: 400ms; }
+        .delay-300 { animation-delay: 600ms; }
+    </style>
 </head>
 <body class="bg-black flex justify-center h-screen bg-gradient-to-br from-[#0f1022] via-[#0c0d1b] to-[#060711]">
-    <div class="flex flex-col w-11/12 space-y-4 my-8">
+    <div id="dashboard-container" class="flex flex-col w-11/12 space-y-4 my-8">
         <!-- Header Section -->
-        <div class="relative flex h-20 rounded-md items-center justify-between overflow-hidden bg-purple-900 px-4">
+        <div class="relative flex h-20 rounded-md items-center justify-between overflow-hidden bg-purple-900 px-4 fade-in-up">
             <h1 class="relative z-10 font-medium text-2xl subpixel-antialiased text-white">Jobster_</h1>
             <div class="flex items-center gap-4">
                 <button id="logoutBtn" class="relative z-10 px-4 py-2 bg-purple-700 text-white rounded-md hover:bg-purple-600">
@@ -29,8 +62,7 @@
         </div>
         
         <!-- System Health Section -->
-
-        <div class="flex bg-white h-[30%] rounded-md p-4">
+        <div class="flex bg-white h-[30%] rounded-md p-4 fade-in-up delay-100">
             <div class="flex w-full gap-4">
                 <!-- Left Side - Circle Health Indicator -->
                 <div class="flex-none w-48 flex items-center justify-center">
@@ -119,7 +151,7 @@
         </div>
 
         <!--Job Status Table Section-->
-        <div class="flex flex-col bg-gray-200 h-[calc(70%-1rem)] rounded-md overflow-hidden">
+        <div class="flex flex-col bg-gray-200 h-[calc(70%-1rem)] rounded-md overflow-hidden fade-in-up delay-200">
             <div class="w-full">
                 <div class="bg-gray-800 text-gray-200 px-6 py-3 font-medium flex justify-between items-center">
                     <span>Active Jobs</span>
